--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,26 +19,45 @@ body {
   font-size: 18px;
   font-weight: 400;
   line-height: 21px;
-  background-color: #ffffff;
-  color: #000000;
-  margin: 0 40px;
+  background-color: #F2F2F2;
+  color: #333333;
+  margin: 0;
+}
+
+.body-wrapper {
+  margin: 0 auto;
   width: 1200px;
+  background-color: #ffffff;
+}
+
+.button {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  color: #ffffff;
+  border-radius: 4px;
+  text-transform: uppercase;
+  background-color: #756157;
+  box-sizing: border-box;
 }
 
 .page-header {
-  width: 1200px;
-  height: 64px;
+  padding: 0 70px;
 }
 
 .navigation {
   display: flex;
+  flex-wrap: wrap;
   gap: 30px;
 }
 
 .navigation-list {
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 
 .navigation-item {
@@ -46,27 +65,10 @@ body {
   padding: 20px 16px;
 }
 
-.navigation-user {
-  margin-right: 70px;
-}
-
 .navigation .button {
-  font-size: 16px;
-  line-height: 20px;
-  text-align: center;
-  background-color: #756157;
-  color: #ffffff;
   display: block;
-  width: 160px;
-  height: 36px;
-  border-radius: 4px;
   padding: 8px 34px;
-  box-sizing: border-box;
-  text-transform: uppercase;
-}
-
-.navigation-list {
-  list-style: none;
+  color: #ffffff;
 }
 
 .navigation-link {
@@ -75,14 +77,31 @@ body {
   line-height: 24px;
   text-align: center;
   text-decoration: none;
-  color: inherit;
+  color: #000000;
+}
+
+.current {
+  padding-bottom: 20px;
+  border-bottom: 2px solid #756257;
+}
+
+.search {
+  background-image: url("../images/search-icon.svg");
+  background-repeat: no-repeat;
+  background-size: 18px auto;
+}
+
+.favourites {
+  background-image: url("../images/favourites-icon.svg");
+  background-repeat: no-repeat;
+  background-size: 20px auto;
 }
 
 .hero {
   min-height: 485px;
   background-image: url("../images/welcome-background.jpg");
-  background-size: 100% auto;
-  background-color: #00B3D3;
+  background-size: cover;
+  background-color: #deebf4;
   background-repeat: no-repeat;
 }
 
@@ -90,6 +109,11 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 51px;
+}
+
+.advantages {
+  text-align: center;
 }
 
 .advantages-title {
@@ -98,12 +122,19 @@ body {
   line-height: 36px;
   text-align: center;
   text-transform: uppercase;
+  margin: 0 auto;
+  margin-bottom: 25px;
+  padding-top: 69px;
+  color: #000000;
+  width: 620px;
 }
 
 .why-sedona-reasons {
   font-size: 22px;
   line-height: 26px;
   text-align: center;
+  margin: 0 auto;
+  margin-bottom: 90px;
 }
 
 .advantages-list {
@@ -114,15 +145,34 @@ body {
   flex-wrap: wrap;
 }
 
+.advantage-title {
+  font-size: 24px;
+  line-height: 28px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin: 0 auto;
+  margin-bottom: 62px;
+  width: 175px;
+  color: #000000;
+}
+
+.advantage-text {
+  margin: 0;
+  width: 230px;
+}
+
 .real-city, .devil-bridge {
   background-color: #82B3D3;
   color: #ffffff;
   width: 400px;
-  height: 385px;
   text-align: center;
   justify-content: center;
   box-sizing: border-box;
-  padding: 102px 85px;
+  padding: 85px 85px;
+}
+
+.white-title {
+  color: #ffffff;
 }
 
 .real-city-inner, .devil-bridge-inner {
@@ -133,47 +183,39 @@ body {
   display: block;
 }
 
-.advantage-title {
-  font-size: 24px;
-  line-height: 28px;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin: 0;
-  margin-bottom: 62px;
-  width: 175px;
-
-}
-
-.first-advantage, .fifth-advantage {
+.real-city-advantage, .bridge-advantage {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .advantages-inner {
   width: 230px;
 }
 
-.second-advantage, .fourth-advantage {
+.advantages-item {
   width: 400px;
-  height: 385px;
   text-align: center;
   justify-content: center;
   box-sizing: border-box;
-  padding: 102px 85px;
+  padding: 85px 85px;
   background-color: rgba(131, 179, 211, 0.12);
 }
 
-.third-advantage {
+.beautiful-road-advantage {
   width: 400px;
-  height: 385px;
   text-align: center;
   justify-content: center;
   box-sizing: border-box;
-  padding: 102px 85px;
+  padding: 85px 85px;
   background-color: rgba(131, 179, 211, 0.2);
 }
 
-.fifth-advantage {
+.bridge-advantage {
   flex-direction: row-reverse;
+}
+
+.sedona-canyon {
+  display: block;
 }
 
 .visit-sedona {
@@ -185,6 +227,7 @@ body {
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
+  color: #000000;
 }
 
 .visit-sedona-text {
@@ -213,6 +256,7 @@ body {
   text-transform: uppercase;
   margin-top: 102px;
   text-align: center;
+  color: #000000;
 }
 
 .recomendation-text {
@@ -223,7 +267,7 @@ body {
 .recomendation-wrap {
   width: 230px;
   min-height: 223px;
-  background-size: auto auto;
+  background-size: 75px auto;
   background-repeat: no-repeat;
   background-position: 50% 0;
   display: flex;
@@ -258,18 +302,23 @@ body {
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
+  color: #000000;
+  padding-top: 96px;
+  margin: 0 auto;
+  margin-bottom: 20px;
 }
 
 .hotel-search-text {
   font-size: 22px;
   line-height: 26px;
+  width: 592px;
+  margin: 0 auto;
+  margin-bottom: 54px;
 }
 
 .hotel-search-button {
   background-color: #756157;
   color: #ffffff;
-  width: 376px;
-  height: 52px;
   border-radius: 4px;
   font-weight: 700;
   font-size: 20px;
@@ -280,10 +329,14 @@ body {
   text-transform: uppercase;
 }
 
+.hotel-search {
+  margin-bottom: 96px;
+}
+
 .subscribe {
   min-height: 415px;
   background-image: url("../images/subscribe-background.jpg");
-  background-size: 100% auto;
+  background-size: cover;
   background-color: #00B3D3;
   color: #ffffff;
   background-repeat: no-repeat;
@@ -295,11 +348,16 @@ body {
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
+  padding-top: 96px;
+  margin: 0;
+  margin-bottom: 20px;
 }
 
 .subscribe-text {
   font-size: 22px;
   line-height: 26px;
+  margin: 0;
+  margin-bottom: 54px;
 }
 
 .subscribe-form {
@@ -307,22 +365,387 @@ body {
   justify-content: center;
 }
 
+.subscribe-form-email {
+  margin: 0;
+}
+
 .subscribe-input {
+  font-family: inherit;
+  font-size: 18px;
+  line-height: 24px;
   width: 452px;
-  height: 52px;
   border-radius: 4px 0 0 4px;
   background-color: #F2F2F2;
-  padding: 12px, 20px, 12px, 20px;
+  padding: 14px 20px;
+    border: none;
+  box-sizing: border-box;
+  color: #000000;
 }
 
 .subscribe-button {
-    width: 232px;
-    height: 52px;
     background-color: #82B3D3;
     color: #ffffff;
     border-radius: 0 4px 4px 0;
+    padding: 8px 50px;
     font-weight: 700;
     font-size: 20px;
     line-height: 36px;
     text-transform: uppercase;
+    font-family: inherit;
+    border: none;
+}
+
+.page-footer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 1060px;
+  margin: 0 auto;
+  margin-top: 40px;
+  padding-bottom: 30px;
+}
+
+.social-list {
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.vkontakte {
+  background-image: url("../images/vkontakte-logo.svg");
+  background-repeat: no-repeat;
+}
+
+.telegram {
+  background-image: url("../images/telegram-logo.svg");
+  background-repeat: no-repeat;
+}
+
+.youtube {
+  background-image: url("../images/youtube-logo.svg");
+  background-repeat: no-repeat;
+}
+
+.phone-number-link {
+  font-size: 40px;
+  line-height: 40px;
+  text-align: center;
+  text-decoration: none;
+  color: #000000;
+}
+
+.catalog-filter {
+  background-image: url(../images/filter-background.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: #F2F2F2;
+  color:#ffffff;
+}
+
+.catalog-filter-title {
+  font-weight: 700;
+  font-size: 60px;
+  line-height: 78px;
+  margin: 0;
+  margin-left: 70px;
+  padding-top: 35px;
+}
+
+.breadcrumbs {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.breadcrumbs-link {
+  font-size: 16px;
+}
+
+.index-link {
+  background-image: url("../images/home-icon.svg");
+  background-repeat: no-repeat;
+  background-size: 13px auto;
+}
+
+.hotel-filter-group {
+  border: none;
+}
+
+.infrastructure-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  padding: 0;
+}
+
+.infrastructure-filter-list {
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+}
+
+.control{
+  line-height: 23px;
+}
+
+.infrastructure-filter-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 70px;
+}
+
+.price-range-control-from, .price-range-control-till {
+  line-height: 24px;
+  color: #000000;
+  text-align: right;
+}
+
+.price-input-from, .price-input-till {
+  font-weight: 700;
+  line-height: 24px;
+  color:#000000;
+  border: none;
+  width: 143px;
+  padding: 12px 20px;
+}
+
+.price-input-from {
+  border-radius: 4px 0 0 4px;
+}
+
+.price-input-till {
+  border-radius: 0 4px 4px 0;
+}
+
+.hotel-filter-button {
+  border: none;
+  border-radius: 4px;
+  padding: 8px 50px;
+  color:#ffffff;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+}
+
+.hotel-filter-submit {
+  background-color: #82B3D3;
+
+}
+
+.hotel-filter-reset {
+  background-color: transparent;
+}
+
+.filter-result-title {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+  color: #000000;
+  margin-right: 200px;
+}
+
+.hotel-cards-sorting {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 70px;
+}
+
+.card-view-list {
+  margin-left: auto;
+}
+
+.after-filter-sorting {
+  border: 2px solid #E5E5E5;
+  border-radius: 4px;
+  width: 292px;
+  padding: 14px 20px;
+  font-family: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  color: inherit;
+}
+
+.card-view-list{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card-view-tiled {
+  background-image: url("../images/tiled-icon.svg");
+  background-repeat: no-repeat;
+  background-size: 16px auto;
+}
+
+.card-view-full-page {
+  background-image: url("../images/full-page-icon.svg");
+  background-repeat: no-repeat;
+  background-size: 16px auto;
+}
+
+.card-view-listed {
+  background-image: url("../images/listed-icon.svg");
+  background-repeat: no-repeat;
+  background-size: 16px auto;
+}
+
+.hotel-cards {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 70px 40px 70px;
+  gap: 20px;
+}
+
+.hotel-card {
+  box-sizing: border-box;
+  width: 340px;
+  min-height: 438px;
+  padding: 20px;
+  border: 1px solid #E6E6E6;
+}
+
+.hotel-card a {
+  text-decoration: none;
+}
+
+.hotel-image {
+  display: block;
+  margin-bottom: 16px;
+}
+
+.hotel-name {
+  margin: 0;
+  margin-bottom: 16px;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  color: #000000;
+}
+
+.hotel-type-price {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.more-favourites {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.details-link {
+  padding: 8px 26px;
+}
+
+.to-favourites-link {
+  padding: 8px 20px;
+  background-color: #82B3D3;
+}
+
+.in-favourites-link {
+  padding: 8px 18px;
+  background-color: #7DB54F;
+}
+
+.stars-rate {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.hotel-rate {
+  font-size: 16px;
+  line-height: 20px;
+  background-color:#F2F2F2;
+  padding: 9px 22px 8px 23px;
+  border-radius: 4px;
+  text-transform: uppercase;
+}
+
+.pagination {
+  width: 1060px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  list-style: none;
+  padding: 0;
+  margin: 0 auto;
+  margin-top: 80px;
+  margin-bottom: 60px;
+}
+
+.pagination-item {
+  width: 60px;
+  height: 60px;
+  border-radius: 4px;
+  text-align: center;
+  background-color: #82B3D3;
+  display: flex;
+  justify-content: space-around;
+  }
+
+.pagination-link {
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+  align-self: center;
+}
+
+.current-page-item {
+  background-color: #F2F2F2;
+}
+
+.current-page-link {
+  color: #000000;
+}
+
+.pagination-ellipses-item {
+  background-color: transparent;
+}
+
+.pagination-ellipses {
+  color: #000000;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 26px;
+  align-self: center;
+}
+
+.subscribe-catalog {
+  min-height: 415px;
+  text-align: center;
+}
+
+.subscribe-catalog-title {
+  color: #000000;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+  padding-top: 96px;
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+.subscribe-catalog-text {
+  width: 475px;
+  font-size: 22px;
+  line-height: 26px;
+  margin: 0;
+  margin-bottom: 54px;
+  margin-left: auto;
+  margin-right: auto;
 }
