--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,6 +40,7 @@ body {
   text-transform: uppercase;
   background-color: #756157;
   box-sizing: border-box;
+  font-family: inherit;
 }
 
 .page-header {
@@ -69,6 +70,8 @@ body {
   display: block;
   padding: 8px 34px;
   color: #ffffff;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .navigation-link {
@@ -570,6 +573,7 @@ body {
   font-size: inherit;
   line-height: inherit;
   color: inherit;
+  background-color: #ffffff;
 }
 
 .card-view-list{
