--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,7 @@
 }
 
 html {
-height: 100%;
+  height: 100%;
 }
 
 body {
@@ -88,9 +88,16 @@ body {
   list-style: none;
 }
 
+.main-navigation {
+  min-width: 465px
+}
+
 .navigation-item {
   align-self: center;
-  padding: 20px 16px;
+}
+
+.navigation-user-item {
+  align-self: center;
 }
 
 .navigation .button {
@@ -99,6 +106,7 @@ body {
   color: #ffffff;
   font-size: 16px;
   line-height: 20px;
+  margin-left: 20px;
 }
 
 .navigation-link {
@@ -108,33 +116,42 @@ body {
   text-align: center;
   text-decoration: none;
   color: #000000;
+  display: block;
+  padding: 20px 16px;
 }
 
 .navigation-user {
   margin-left: auto;
 }
 
+.sedona-logo {
+  display: block;
+  margin-bottom: -6px;
+}
+
 .current {
-  padding-bottom: 20px;
   border-bottom: 2px solid #756257;
+  margin-bottom: -2px;
 }
 
 .search {
   background-image: url("../images/search-icon.svg");
   background-repeat: no-repeat;
   background-size: 18px auto;
-  width: 18px;
-  height: 18px;
-  display: inline-block;
+  background-position: 50% 50%;
+  width: 20px;
+  height: 20px;
+
+
 }
 
 .favourites {
   background-image: url("../images/favourites-icon.svg");
   background-repeat: no-repeat;
-  background-size: 20px auto;
+  background-size: 18px auto;
+  background-position: 50% 50%;
   width: 20px;
   height: 20px;
-  display: inline-block;
   position: relative;
 }
 
@@ -143,7 +160,7 @@ body {
   line-height: 10px;
   text-align: center;
   vertical-align: middle;
-  color:#ffffff;
+  color: #ffffff;
   background-color: #7DB54F;
   border-radius: 50%;
   display: table-cell;
@@ -219,8 +236,8 @@ body {
   width: 230px;
 }
 
-.real-city, .devil-bridge {
-  background-color: #82B3D3;
+.real-city,
+.devil-bridge {
   color: #ffffff;
   width: 400px;
   text-align: center;
@@ -233,7 +250,8 @@ body {
   color: #ffffff;
 }
 
-.real-city-inner, .devil-bridge-inner {
+.real-city-inner,
+.devil-bridge-inner {
   width: 230px;
 }
 
@@ -241,9 +259,11 @@ body {
   display: block;
 }
 
-.real-city-advantage, .bridge-advantage {
+.real-city-advantage,
+.bridge-advantage {
   display: flex;
   flex-wrap: wrap;
+  background-color: #82B3D3;
 }
 
 .advantages-inner {
@@ -278,6 +298,7 @@ body {
 
 .visit-sedona {
   text-align: center;
+  padding: 64px 348px;
 }
 
 .visit-sedona-title {
@@ -286,11 +307,14 @@ body {
   line-height: 36px;
   text-transform: uppercase;
   color: #000000;
+  margin: 0;
+  margin-bottom: 20px;
 }
 
 .visit-sedona-text {
   font-size: 22px;
   line-height: 26px;
+  margin: 0;
 }
 
 .recomendations-list {
@@ -325,7 +349,7 @@ body {
 .recomendation-wrap {
   width: 230px;
   min-height: 223px;
-  background-size: 75px auto;
+  background-size: auto;
   background-repeat: no-repeat;
   background-position: 50% 0;
   display: flex;
@@ -353,6 +377,7 @@ body {
 
 .hotel-search {
   text-align: center;
+  padding: 96px 304px;
 }
 
 .hotel-search-title {
@@ -361,8 +386,7 @@ body {
   line-height: 36px;
   text-transform: uppercase;
   color: #000000;
-  padding-top: 96px;
-  margin: 0 auto;
+  margin: 0;
   margin-bottom: 20px;
 }
 
@@ -375,30 +399,20 @@ body {
 }
 
 .hotel-search-button {
-  background-color: #756157;
-  color: #ffffff;
-  border-radius: 4px;
-  font-weight: 700;
   font-size: 20px;
   line-height: 36px;
-  text-align: center;
   padding: 8px 50px;
   text-decoration: none;
-  text-transform: uppercase;
-}
-
-.hotel-search {
-  margin-bottom: 96px;
 }
 
 .subscribe {
-  min-height: 415px;
   background-image: url("../images/subscribe-background.jpg");
   background-size: cover;
   background-color: #00B3D3;
   color: #ffffff;
   background-repeat: no-repeat;
   text-align: center;
+  padding: 96px 258px 104px;
 }
 
 .subscribe-title {
@@ -406,7 +420,6 @@ body {
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
-  padding-top: 96px;
   margin: 0;
   margin-bottom: 20px;
 }
@@ -435,22 +448,22 @@ body {
   border-radius: 4px 0 0 4px;
   background-color: #F2F2F2;
   padding: 14px 20px;
-    border: none;
+  border: none;
   box-sizing: border-box;
   color: #000000;
 }
 
 .subscribe-button {
-    background-color: #82B3D3;
-    color: #ffffff;
-    border-radius: 0 4px 4px 0;
-    padding: 8px 50px;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 36px;
-    text-transform: uppercase;
-    font-family: inherit;
-    border: none;
+  background-color: #82B3D3;
+  color: #ffffff;
+  border-radius: 0 4px 4px 0;
+  padding: 8px 50px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+  text-transform: uppercase;
+  font-family: inherit;
+  border: none;
 }
 
 .page-footer {
@@ -514,7 +527,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-color: #F2F2F2;
-  color:#ffffff;
+  color: #ffffff;
   min-height: 307px;
   padding: 70px;
   padding-top: 35px;
@@ -555,7 +568,7 @@ body {
 .hotel-filter-group {
   border: none;
   margin: 0;
-  padding:0;
+  padding: 0;
 }
 
 .infrastructure-filter-group {
@@ -563,7 +576,8 @@ body {
 }
 
 .type-filter-group {
-  margin-right: 140px;;
+  margin-right: 140px;
+  ;
 }
 
 .infrastructure-title {
@@ -579,7 +593,7 @@ body {
   margin: 0;
 }
 
-.control{
+.control {
   line-height: 23px;
 }
 
@@ -587,17 +601,19 @@ body {
   display: flex;
 }
 
-.price-range-control-from, .price-range-control-till {
+.price-range-control-from,
+.price-range-control-till {
   line-height: 24px;
   color: #000000;
   text-align: right;
 }
 
-.price-input-from, .price-input-till {
+.price-input-from,
+.price-input-till {
   font-weight: 700;
   font-size: inherit;
   line-height: 24px;
-  color:#000000;
+  color: #000000;
   border: none;
   width: 143px;
   padding: 12px 20px;
@@ -622,7 +638,7 @@ body {
   border: none;
   border-radius: 4px;
   padding: 8px 50px;
-  color:#ffffff;
+  color: #ffffff;
   text-transform: uppercase;
   font-weight: 700;
   font-size: 16px;
@@ -645,13 +661,14 @@ body {
   line-height: 36px;
   text-transform: uppercase;
   color: #000000;
+  margin: 0;
   margin-right: 200px;
 }
 
 .hotel-cards-sorting {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 70px;
+  padding: 50px 70px 40px;
   align-items: center;
 }
 
@@ -671,6 +688,7 @@ body {
   line-height: inherit;
   color: inherit;
   background-color: #ffffff;
+  cursor: pointer;
 }
 
 .after-filter-sorting:hover {
@@ -686,7 +704,7 @@ body {
   outline: 2px solid rgba(0, 0, 0, 0.3);
 }
 
-.card-view-list{
+.card-view-list {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -739,13 +757,19 @@ body {
   display: inline-block;
 }
 
+.hotels-cards {
+  padding: 0 70px 60px;
+}
+
 .hotel-cards {
   list-style: none;
   padding: 0;
+  margin: 0;
   display: flex;
   flex-wrap: wrap;
-  margin: 0 70px 40px 70px;
+  padding-bottom: 40px;
   gap: 20px;
+  border-bottom: 1px solid #e6e6e6;
 }
 
 .hotel-card {
@@ -753,7 +777,8 @@ body {
   width: 340px;
   min-height: 438px;
   padding: 20px;
-  border: 1px solid #E6E6E6;
+  box-shadow: 0 0 0 1px #e6e6e6;
+  border-radius: 4px;
 }
 
 .hotel-card a {
@@ -831,65 +856,63 @@ body {
 .hotel-rate {
   font-size: 16px;
   line-height: 20px;
-  background-color:#F2F2F2;
+  background-color: #F2F2F2;
   padding: 9px 22px 8px 23px;
   border-radius: 4px;
   text-transform: uppercase;
 }
 
 .pagination {
-  width: 1060px;
+  width: 400px;
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
   list-style: none;
   padding: 0;
-  margin: 0 auto;
-  margin-top: 80px;
-  margin-bottom: 60px;
+  margin: 0;
+  padding-top: 40px;
 }
 
-.pagination-item {
-  width: 60px;
-  height: 60px;
-  border-radius: 4px;
-  text-align: center;
-  background-color: #82B3D3;
-  display: flex;
-  justify-content: space-around;
-  }
-
 .pagination-link {
+  min-width: 60px;
+  min-height: 60px;
   color: #ffffff;
   text-decoration: none;
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
-  align-self: center;
-}
-
-.current-page-item {
-  background-color: #F2F2F2;
+  align-items: center;
+  border-radius: 4px;
+  background-color: #82B3D3;
+  display: flex;
+  justify-content: space-around;
+  padding: 12px;
+  box-sizing: border-box;
 }
 
 .current-page-link {
   color: #000000;
-}
-
-.pagination-ellipses-item {
-  background-color: transparent;
+  background-color: #F2F2F2;
 }
 
 .pagination-ellipses {
+  min-width: 60px;
+  min-height: 60px;
+  background-color: transparent;
   color: #000000;
   font-weight: 400;
   font-size: 22px;
   line-height: 26px;
-  align-self: center;
+  align-items: center;
+  border-radius: 4px;
+  display: flex;
+  justify-content: space-around;
+  padding: 12px;
+  box-sizing: border-box;
 }
 
 .subscribe-catalog {
-  min-height: 415px;
+  padding: 96px 258px 104px;
   text-align: center;
 }
 
@@ -899,7 +922,6 @@ body {
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
-  padding-top: 96px;
   margin: 0;
   margin-bottom: 20px;
 }
@@ -908,8 +930,6 @@ body {
   width: 475px;
   font-size: 22px;
   line-height: 26px;
-  margin: 0;
+  margin: 0 auto;
   margin-bottom: 54px;
-  margin-left: auto;
-  margin-right: auto;
 }
