--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,18 @@
   font-display: swap;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
 html {
   height: 100%;
 }
@@ -78,6 +90,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
+  position: relative;
 }
 
 .navigation-list {
@@ -89,7 +102,8 @@ body {
 }
 
 .main-navigation {
-  min-width: 465px
+  min-width: 465px;
+  margin-left: 150px;
 }
 
 .navigation-item {
@@ -126,12 +140,15 @@ body {
 
 .sedona-logo {
   display: block;
-  margin-bottom: -6px;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .current {
-  border-bottom: 2px solid #756257;
-  margin-bottom: -2px;
+  text-decoration: underline;
+  text-decoration-color: #756257;
+  text-underline-offset: 24px;
 }
 
 .search {
@@ -139,8 +156,8 @@ body {
   background-repeat: no-repeat;
   background-size: 18px auto;
   background-position: 50% 50%;
-  width: 20px;
-  height: 20px;
+  width: 44px;
+  height: 64px;
 
 
 }
@@ -150,44 +167,44 @@ body {
   background-repeat: no-repeat;
   background-size: 18px auto;
   background-position: 50% 50%;
-  width: 20px;
-  height: 20px;
+  width: 44px;
+  height: 64px;
   position: relative;
 }
 
 .favourites-number {
+  font-weight: 400;
   font-size: 10px;
-  line-height: 10px;
-  text-align: center;
-  vertical-align: middle;
+  line-height: 20px;
   color: #ffffff;
   background-color: #7DB54F;
   border-radius: 50%;
-  display: table-cell;
   width: 20px;
   height: 20px;
   position: absolute;
+  top: 12px;
+  left: 22px;
 }
 
 .hero {
-  min-height: 485px;
   background-image: url("../images/welcome-background.jpg");
   background-size: cover;
   background-color: #deebf4;
   background-repeat: no-repeat;
+  padding: 51px 371px 82px;
 }
 
 .hero-image {
   display: block;
-  padding-left: 371px;
-  padding-right: 371px;
-  padding-top: 51px;
-  padding-bottom: 82px;
+
+}
+
+.advantages-title-section {
+  padding: 69px 274px;
 }
 
 .advantages {
   text-align: center;
-  padding-top: 69px;
 }
 
 .advantages-title {
@@ -196,10 +213,8 @@ body {
   line-height: 36px;
   text-align: center;
   text-transform: uppercase;
-  margin: 0;
+  margin: 0 auto;
   margin-bottom: 25px;
-  padding-left: 290px;
-  padding-right: 290px;
   color: #000000;
   width: 620px;
 }
@@ -209,7 +224,6 @@ body {
   line-height: 26px;
   text-align: center;
   margin: 0 auto;
-  padding-bottom: 90px;
 }
 
 .advantages-list {
@@ -326,8 +340,15 @@ body {
 
 .recomendations-item {
   width: 400px;
-  min-height: 385px;
   background-color: rgba(131, 179, 211, 0.12);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 30px;
+  padding: 183px 85px 81px;
+  background-size: auto;
+  background-repeat: no-repeat;
+  background-position: 50% 21%;
 }
 
 .recomendation-title {
@@ -336,7 +357,6 @@ body {
   font-size: 24px;
   line-height: 28px;
   text-transform: uppercase;
-  margin-top: 102px;
   text-align: center;
   color: #000000;
 }
@@ -344,19 +364,6 @@ body {
 .recomendation-text {
   margin: 0;
   text-align: center;
-}
-
-.recomendation-wrap {
-  width: 230px;
-  min-height: 223px;
-  background-size: auto;
-  background-repeat: no-repeat;
-  background-position: 50% 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 30px;
-  margin: 81px 85px;
 }
 
 .house {
@@ -470,10 +477,11 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  width: 1060px;
+  width: 100%;
   padding: 70px;
   padding-top: 40px;
   padding-bottom: 30px;
+  align-items: center;
 }
 
 .social-list {
@@ -482,13 +490,14 @@ body {
   padding-left: 0;
   display: flex;
   flex-wrap: wrap;
+  align-items: baseline;
 }
 
 .social-link-vkontakte {
   background-image: url("../images/vkontakte-logo.svg");
   background-repeat: no-repeat;
-  width: 24px;
-  height: 14px;
+  width: 47px;
+  height: 40px;
   padding: 13px 12px;
   background-position: 50% 50%;
   display: inline-block;
@@ -497,8 +506,8 @@ body {
 .social-link-telegram {
   background-image: url("../images/telegram-logo.svg");
   background-repeat: no-repeat;
-  width: 18px;
-  height: 15px;
+  width: 47px;
+  height: 40px;
   padding: 12px 15px 13px;
   background-position: 50% 50%;
   display: inline-block;
@@ -507,8 +516,8 @@ body {
 .social-link-youtube {
   background-image: url("../images/youtube-logo.svg");
   background-repeat: no-repeat;
-  width: 22px;
-  height: 17px;
+  width: 47px;
+  height: 40px;
   padding: 12px 13px;
   background-position: 50% 50%;
   display: inline-block;
@@ -569,6 +578,7 @@ body {
   border: none;
   margin: 0;
   padding: 0;
+  min-width: 150px;
 }
 
 .infrastructure-filter-group {
@@ -576,7 +586,7 @@ body {
 }
 
 .type-filter-group {
-  margin-right: 140px;
+  margin-right: 70px;
   ;
 }
 
@@ -599,6 +609,7 @@ body {
 
 .hotel-filter-form {
   display: flex;
+  gap: 70px;
 }
 
 .price-range-control-from,
