--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,6 +80,21 @@ body {
   font-family: inherit;
   cursor: pointer;
   display: inline-block;
+  text-decoration: none;
+  border: none;
+}
+
+.button:hover {
+  background-color: #615048;
+}
+
+.button:focus {
+  background-color: #615048;
+}
+
+.button:focus-visible {
+  background-color: #615048;
+  outline: none;
 }
 
 .page-header {
@@ -102,7 +117,7 @@ body {
 }
 
 .main-navigation {
-  min-width: 465px;
+  max-width: 600px;
   margin-left: 150px;
 }
 
@@ -121,6 +136,15 @@ body {
   font-size: 16px;
   line-height: 20px;
   margin-left: 20px;
+}
+
+.button:active {
+  background-color: #756157;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.button:disabled {
+  background-color: #E5E5E5;
 }
 
 .navigation-link {
@@ -246,6 +270,34 @@ left: 0;
   margin-bottom: 62px;
   width: 175px;
   color: #000000;
+}
+
+.advantages-inner {
+  position: relative;
+}
+
+.advantages-inner::after {
+  content:"";
+  width: 60px;
+  height: 2px;
+  background-color: rgba(0, 0, 0, 0.3);
+  position: absolute;
+  top: 86px;
+  left: 85px;
+}
+
+.white-text-inner {
+  position: relative;
+}
+
+.white-text-inner::after {
+  content:"";
+  width: 60px;
+  height: 2px;
+  background-color: rgba(255, 255, 255, 0.3);
+  position: absolute;
+  top: 170px;
+  left: 170px;
 }
 
 .advantage-text {
@@ -476,6 +528,23 @@ left: 0;
   border: none;
 }
 
+.subscribe-button:hover {
+  background-color: #68A2CA;
+}
+
+.subscribe-button:focus {
+  background-color: #68A2CA;
+}
+
+.subscribe-button:focus-visible {
+  background-color: #68A2CA;
+  outline: none;
+}
+
+.subscribe-button:active {
+  background-color: #82B3D3;
+}
+
 .page-footer {
   display: flex;
   flex-wrap: wrap;
@@ -493,36 +562,45 @@ left: 0;
   padding-left: 0;
   display: flex;
   flex-wrap: wrap;
-  align-items: baseline;
+  align-items: center;
 }
 
 .social-link-vkontakte {
-  background-image: url("../images/vkontakte-logo.svg");
-  background-repeat: no-repeat;
-  width: 47px;
-  height: 40px;
-  padding: 13px 12px;
-  background-position: 50% 50%;
+  padding: 10px 12px;
   display: inline-block;
 }
 
+.social-logo-svg {
+  fill: #83B3D3;
+}
+
+.social-link:hover .social-logo-svg path {
+  fill: #68A2CA;
+}
+
+.social-link:focus .social-logo-svg path {
+  fill: #68A2CA;
+}
+
+.social-link:focus-visible .social-logo-svg path {
+  fill: #68A2CA;
+}
+
+.social-link:focus-visible {
+  outline: none;
+}
+
+.social-link:active .social-logo-svg path {
+  fill: rgba(104, 162, 202, 0.3);
+}
+
 .social-link-telegram {
-  background-image: url("../images/telegram-logo.svg");
-  background-repeat: no-repeat;
-  width: 47px;
-  height: 40px;
-  padding: 12px 15px 13px;
-  background-position: 50% 50%;
+  padding: 10px 15px 10px;
   display: inline-block;
 }
 
 .social-link-youtube {
-  background-image: url("../images/youtube-logo.svg");
-  background-repeat: no-repeat;
-  width: 47px;
-  height: 40px;
-  padding: 12px 13px;
-  background-position: 50% 50%;
+  padding: 9px 12px;
   display: inline-block;
 }
 
@@ -532,6 +610,43 @@ left: 0;
   text-align: center;
   text-decoration: none;
   color: #000000;
+}
+
+.phone-number-link:hover {
+  color: #756157;
+}
+
+.phone-number-link:focus {
+  color: #756157;
+}
+
+.phone-number-link:focus-visible {
+  color: #756157;
+  outline: none;
+}
+
+.phone-number-link:active {
+  color: rgba(117, 97, 87, 0.3);
+}
+
+.developer-link:hover .developer-logo-svg path {
+  fill:#756157;
+}
+
+.developer-link:focus .developer-logo-svg path {
+  fill:#756157;
+}
+
+.developer-link:focus-visible .developer-logo-svg path {
+  fill:#756157;
+}
+
+.developer-link:focus-visible {
+  outline: none;
+}
+
+.developer-link:active .developer-logo-svg path {
+  fill: rgba(117, 97, 87, 0.3);
 }
 
 .catalog-filter {
@@ -662,11 +777,52 @@ left: 0;
 
 .hotel-filter-submit {
   background-color: #82B3D3;
+}
 
+.hotel-filter-submit:hover {
+  background-color: #68A2CA;
+}
+
+.hotel-filter-submit:focus {
+  background-color: #68A2CA;
+}
+
+.hotel-filter-submit:focus-visible {
+  background-color: #68A2CA;
+  outline: none;
+}
+
+.hotel-filter-submit:active {
+  background-color: #82B3D3;
 }
 
 .hotel-filter-reset {
   background-color: transparent;
+}
+
+.hotel-filter-reset:hover {
+  background-color: transparent;
+  opacity: 0.6;
+}
+
+.hotel-filter-reset:focus {
+  background-color: transparent;
+  outline: 3px solid #83B3D3;
+}
+
+.hotel-filter-reset:focus-visible {
+  background-color: transparent;
+  outline: 3px solid #83B3D3;
+}
+
+.hotel-filter-reset:active {
+  background-color: transparent;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.hotel-filter-reset:disabled {
+  background-color: transparent;
+  opacity: 0.1;
 }
 
 .filter-result-title {
@@ -792,92 +948,103 @@ left: 0;
   padding: 20px;
   box-shadow: 0 0 0 1px #e6e6e6;
   border-radius: 4px;
+  display: grid;
+  grid-template-columns: 140px 140px;
+  gap: 16px 20px;
+  grid-auto-rows: min-content;
 }
 
-.hotel-card a {
+.hotel-link {
   text-decoration: none;
+  grid-column: 1/3;
 }
 
 .hotel-image {
   display: block;
-  margin-bottom: 16px;
-  object-fit: contain;
+}
+
+.hotel-price {
+  justify-self: end;
 }
 
 .hotel-name {
   margin: 0;
-  margin-bottom: 16px;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
   color: #000000;
 }
 
-.hotel-type-price {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin: 0;
-  margin-bottom: 16px;
-}
-
-.more-favourites {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin: 0;
-  margin-bottom: 16px;
-}
-
 .details-link {
   padding: 8px 26px;
+  grid-column: 1/2;
 }
 
 .to-favourites-link {
   padding: 8px 20px;
+  background-color: #82B3D3;
+  grid-column: 2/3;
+}
+
+.to-favourites-link:hover {
+  background-color: #68A2CA;
+}
+
+.to-favourites-link:focus {
+  background-color: #68A2CA;
+}
+
+.to-favourites-link:focus-visible {
+  background-color: #68A2CA;
+}
+
+.to-favourites-link:active {
   background-color: #82B3D3;
 }
 
 .in-favourites-link {
   padding: 8px 18px;
   background-color: #7DB54F;
+  grid-column: 2/3;
 }
 
-.stars-rate {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin: 0;
+.in-favourites-link:hover {
+  background-color: #6C9E42;
+}
+
+.in-favourites-link:focus {
+  background-color: #6C9E42;
+}
+
+.in-favourites-link:focus-visible {
+  background-color: #6C9E42;
+}
+
+.in-favourites-link:active {
+  background-color: #7DB54F;
+}
+
+.stars{
+  background-repeat: no-repeat;
+  padding-right: 25px;
+  width: 140px;
+  height: 37px;
+  display: inline-block;
 }
 
 .stars-four {
   background-image: url("../images/catalog/star.svg"), url("../images/catalog/star.svg"), url("../images/catalog/star.svg"), url("../images/catalog/star.svg");
-  background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
   background-position: left 50%, 24px 50%, 48px 50%, 72px 50%;
-  padding-right: 25px;
-  width: 140px;
-  height: 37px;
-  display: inline-block;
 }
 
 .stars-three {
   background-image: url("../images/catalog/star.svg"), url("../images/catalog/star.svg"), url("../images/catalog/star.svg");
-  background-repeat: no-repeat, no-repeat, no-repeat;
   background-position: left 50%, 24px 50%, 48px 50%;
-  padding-right: 25px;
-  width: 140px;
-  height: 37px;
-  display: inline-block;
 }
 
 .stars-two {
   background-image: url("../images/catalog/star.svg"), url("../images/catalog/star.svg");
-  background-repeat: no-repeat, no-repeat;
   background-position: left 50%, 24px 50%;
-  padding-right: 25px;
-  width: 140px;
-  height: 37px;
-  display: inline-block;
 }
 
 .hotel-rate {
@@ -890,7 +1057,7 @@ left: 0;
 }
 
 .pagination {
-  width: 400px;
+  width: 600px;
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
@@ -902,7 +1069,7 @@ left: 0;
 
 .pagination-link {
   min-width: 60px;
-  min-height: 60px;
+  max-height: 60px;
   color: #ffffff;
   text-decoration: none;
   font-weight: 700;
@@ -917,9 +1084,34 @@ left: 0;
   box-sizing: border-box;
 }
 
+.pagination-link:hover:not(.current-page-link) {
+  background-color: #68A2CA;
+  border: 1px solid #82B3D3;
+}
+
+.pagination-link:focus:not(.current-page-link) {
+  background-color: #68A2CA;
+  border: 1px solid #82B3D3;
+}
+
+.pagination-link:focus-visible:not(.current-page-link) {
+  background-color: #68A2CA;
+  border: 1px solid #82B3D3;
+  outline: none;
+}
+
+.pagination-link:active:not(.current-page-link) {
+  background-color: #82B3D3;
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .current-page-link {
   color: #000000;
   background-color: #F2F2F2;
+}
+
+.current-page-link:focus-visible {
+  outline: none;
 }
 
 .pagination-ellipses {
